# roboqc-agent-challenge

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEVPOST.md  Dockerfile  LICENSE  PARTNER_REVIEW.md  PUBLIC_EVIDENCE.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: bench.yml  ci.yml
apps/depositshield/: .env.example  README.md  next.config.mjs  package.json
apps/depositshield/app/: globals.css  layout.tsx  page.tsx
apps/depositshield/app/api/sessions/: route.ts
apps/depositshield/app/api/upload-url/: route.ts
apps/depositshield/app/r/[id]/: page.tsx
apps/depositshield/components/: Report.tsx
apps/depositshield/infra/: dynamodb-table.yaml
apps/depositshield/lib/db/: dynamo.ts
apps/depositshield/lib/inspection/: client.ts  prompt.ts  schema.ts
apps/depositshield/lib/storage/: s3.ts
apps/gradelens/: .env.example  README.md  next.config.mjs  package.json
apps/gradelens/app/: globals.css  layout.tsx  page.tsx
apps/gradelens/app/api/devices/: route.ts
apps/gradelens/infra/gradelens/: dynamodb-table.yaml
apps/gradelens/lib/db/: dynamo.ts
apps/gradelens/lib/grading/: client.ts  prompt.ts  schema.ts
apps/gradelens/lib/storage/: s3.ts
bench/: README.md  bench_smt_inspection.py  report.py
data/: CITATIONS.md  fable5_sample_request.json
docs/: AUDIT.md  H0_IDEATION.md  ai_collaboration_protocol.md  architecture.md  codex_brief.md  codex_review_brief.md  decision_log.md  demo.md  devpost_submission.md  fable5_integration.md  fmea_taxonomy.md  h0_gradelens_plan.md  inspection_target_spec.md  non_negotiables.md  open_questions.md  operator_workflow.md  prompt_schema_handoff.md  submission_audit.md  video_upload.md
docs/adr/: 0001-two-packages.md
docs/research/: DepositShield_deep_research.md
infra/cloudrun/: Dockerfile  README.md  cloudbuild.yaml  deploy.sh  service.yaml
infra/fable5/: Dockerfile  agent_builder_system_prompt.md  agent_builder_tool.json  cloudbuild.yaml  requirements.txt
infra/monitoring/: README.md  fable5-fallback-metric.yaml  http-5xx-alert.policy.json  http-5xx-metric.yaml  llm-error-alert.policy.json  llm-error-metric.yaml  llm-latency-metric.yaml  setup.sh
scripts/: deploy_cloudrun.sh  download_datasets.sh  set_final_video_url.py  setup_fable5_gcp.sh  smoke_fable5.sh  verify_submission.py
src/neuron_vision/: __init__.py  demo_mode.py  pipeline.py  schemas.py  telemetry.py
src/neuron_vision/agents/: __init__.py  base.py  chief_inspector.py  component_inspector.py  marking_inspector.py  solder_inspector.py  triage_agent.py
src/neuron_vision/fable5/: __init__.py  api.py  cache.py  client.py  schemas.py  secrets.py  telemetry.py
src/roboqc_agent/: __init__.py  api.py  config.py  graph.py  prompts.py  schemas.py  taxonomy.py
src/roboqc_agent/agents/: __init__.py  evidence_report.py  evidence_report_factory.py  fmea_risk.py  supervisor.py  supervisor_factory.py  vision_inspector.py
src/roboqc_agent/auth/: __init__.py
src/roboqc_agent/checkpointing/: __init__.py
src/roboqc_agent/execution_store/: __init__.py  models.py  sqlite_repo.py  store.py
src/roboqc_agent/hitl/: __init__.py
src/roboqc_agent/orchestration/: board_flow.py  tool_runner.py
src/roboqc_agent/policy/: __init__.py  engine.py
src/roboqc_agent/prompts/: __init__.py  evidence_report.py  fmea_risk.py  supervisor.py  vision_inspector.py
src/roboqc_agent/providers/: demo.py  vertex_gemini.py
src/roboqc_agent/telemetry/: __init__.py  llm_telemetry.py  request_log.py
src/roboqc_agent/tools/: __init__.py  base.py
tests/: test_api.py  test_board_flow.py  test_evidence_report.py  test_evidence_report_factory.py  test_execution_store.py  test_fable5_api.py  test_fable5_client.py  test_fmea_risk.py  test_graph.py  test_llm_telemetry.py  test_neuron_vision_telemetry.py  test_pipeline.py  test_policy_engine.py  test_request_log.py  test_scaffold.py  test_schemas.py  test_supervisor.py  test_supervisor_factory.py  test_taxonomy.py  test_telemetry.py  test_tool_runner.py  test_tools_base.py  test_vertex_gemini.py  test_vision_inspector.py
ui/: streamlit_app.py
video/: .gitignore  README.md  VO_SCRIPT_V5.md  make_frames.py  make_video.py  make_vo.py  make_voiceover.py
(+4 files in other folders)
