[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "roboqc-agent-challenge"
version = "0.1.0"
description = "RoboQC Agent: SMT first-article inspection assistant"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Aleksandr Lyubarev" }]
dependencies = [
  "anthropic>=0.49.0,<1",
  "fastapi",
  "google-adk",
  "google-cloud-secret-manager>=2.20.0,<3",
  "google-genai",
  "pydantic>=2,<3",
  "streamlit>=1.35.0",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/roboqc_agent", "src/neuron_vision"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# Markdown table inside the FMEA prompt string — wrapping would change the
# prompt content the model sees.
"src/roboqc_agent/prompts/fmea_risk.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["roboqc_agent", "neuron_vision"]

[[tool.mypy.overrides]]
# Optional runtime deps (requirements.txt, not pyproject) and GAPIC clients
# without complete stubs — absent in the CI venv, present on Cloud Run.
module = [
  "google.cloud.secretmanager",
  "vertexai",
  "vertexai.*",
  "phoenix",
  "phoenix.*",
  "openinference.*",
  "opentelemetry.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
